[package]
name = "lolb"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"

[dependencies]
acme-lib = "0.5"
bytes = "0.4.7"
chunked_transfer = "1"
futures-core-preview = "=0.3.0-alpha.18"
futures-sink-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"
h2 = "0.2.0-alpha.1"
http = "0.1"
httparse = "1.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slab = "0.4"
tokio-io = { version = "=0.2.0-alpha.4", features = ["util"] }
tokio-sync = "=0.2.0-alpha.4"
tokio-net = { version = "=0.2.0-alpha.4", features = ["tcp", "udp" ] }
webpki = "0.21"
